fix minor css spacing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ h3 {
 }
 #header h1 {
 	font-size: 2.5em;
-	margin-left: -.2em;
+	margin-left: -.1em;
 	margin-bottom: 2em;
 	text-transform: lowercase;
 	letter-spacing: -4px;
@@ -255,6 +255,11 @@ img.center {
 		width: inherit;
 		padding-left: 10px;
 		padding-right: 10px;
+	}
+
+	#header h1 {
+		margin-left: 0em;
+		margin-bottom: 1em;
 	}
 
 	#sidebar {
